--- a/prepros-6.config
+++ b/prepros-6.config
@@ -34,10 +34,16 @@
       "imports": [
         "css/settings/mixins.scss"
       ]
+    },
+    {
+      "path": "app/css/styles.scss",
+      "imports": [
+        "app/css/settings/mixins.scss"
+      ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
