--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.1",
     "gulp-watch": "^5.0.0",
+    "jquery": "^3.3.1",
     "run-sequence": "^2.2.1"
   }
 }
