--- a/prepros-6.config
+++ b/prepros-6.config
@@ -14,7 +14,9 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "css"
+      "css",
+      "app",
+      "app/css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
